--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -9,6 +9,18 @@ body{
   overflow-x: hidden;
 }
 
-.grv{
-  display: block;
+.my-installer-header{
+  height: 80px;
+  min-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.my-installer-content{
+  padding-right: 35px;
+  margin-top: 55px
+}
+
+.my-installer-hints{
+  margin-top: 120px;
 }
