fixing dev server

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -12,8 +12,8 @@ body{
   color: #676a6c;
   overflow-x: hidden;
 
-  h2{
-    font-weight: 500;
+  h1, h2, h3, h4{
+    font-weight: initial;
   }
 }
 
