background color is not white in IE11

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -7,7 +7,7 @@ $fa-font-path: "~font-awesome/fonts";
 
 body{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color:initial;
+  background-color: white;
   font-size: 13px;
   color: #676a6c;
   overflow-x: hidden;
@@ -42,7 +42,7 @@ body{
 
   .my-page-section-endpoints-item{
     font-size: 14px;
-    margin-bottom: 15px;    
+    margin-bottom: 15px;
     margin-right: 20px;
   }
 }
