--- a/web/src/styles/inspinia/_base.scss
+++ b/web/src/styles/inspinia/_base.scss
@@ -1,7 +1,5 @@
 body {
-  font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #2f4050;
-  font-size: 13px;
+  font-family: $font-family-base;    
   color: $text-color;
   overflow-x: hidden;
 
