--- a/web/src/styles/inspinia/_badgets_labels.scss
+++ b/web/src/styles/inspinia/_badgets_labels.scss
@@ -2,7 +2,7 @@
 .label {
   background-color: $light-gray;
   color: $label-badget-color;
-  font-family: 'Open Sans';
+  font-family: $font-family-base;
   font-size: 10px;
   font-weight: 600;
   padding: 3px 8px;
@@ -12,7 +12,7 @@
 .badge {
   background-color: $light-gray;
   color: $label-badget-color;
-  font-family: 'Open Sans';
+  font-family: $font-family-base;
   font-size: 11px;
   font-weight: 600;
   padding-bottom: 4px;
