--- a/web/src/styles/bootstrap/index.scss
+++ b/web/src/styles/bootstrap/index.scss
@@ -7,6 +7,11 @@
 // Core variables and mixins
 
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
+$gray-base:#1a1a1a;
+$font-size-base: 14px;
+$text-muted: #888888;
+$gray-base:#1a1a1a;
+$font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins";
