--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -1,3 +1,18 @@
+/*
+Copyright 2017 Gravitational, Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
 $fa-font-path: "~font-awesome/fonts";
 
 @import "bootstrap/index.scss";
@@ -5,8 +20,8 @@ $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 @import "inputs.scss";
 
-body{  
-  background-color: white;    
+body{
+  background-color: white;
   overflow-x: hidden;
 
   h1, h2, h3, h4{
